# YMM4-Radeon_Fast_Plugin_Pack

./: .gitignore  LICENSE  PROBABLE_CHANGES.md  README.md
src/RadeonAmfPlugin/: NVEncVideoWriterPlugin.sln  README.md
src/RadeonAmfPlugin/AmfNative/: AmfNative.cpp  AmfNative.h  AmfNative.vcxproj
src/RadeonAmfPlugin/NVEncVideoWriterPlugin/: AmfNativeMethods.cs  AmfVideoFileWriter.cs  NVEncVideoWriterPlugin.csproj  SETTINGS.md
src/RadeonFastFileSourcePlugin/: Directory.Build.props  NVEncVideoWriterPlugin.sln  README.md  SETTINGS.md
src/RadeonFastFileSourcePlugin/AmfNative/: AmfNative.cpp  AmfNative.vcxproj
src/RadeonFastFileSourcePlugin/NVEncVideoWriterPlugin/: AmfSettings.cs  AmfVideoFileWriter.cs  AmfVideoFileWriterPlugin.cs  NVEncVideoWriterPlugin.csproj
src/RadeonFastFileSourcePlugin/NVEncVideoWriterPlugin/Native/: CMakeLists.txt  RadeonFastNativeAudio.c  RadeonFastNativeImage.c  RadeonFastNativeVideo.c  build_native.cmd  build_native_image.cmd
src/RadeonFastFileSourcePlugin/NVEncVideoWriterPlugin/RadeonFastFileSource/: AudioPcmCache.cs  FastFileSourceLog.cs  ImageBitmapCache.cs  (+22 more)
src/RadeonFastFileSourcePlugin/analysis/: ymm4_frame_pipeline_summary.txt  ymm4_private_api_details.txt
src/RadeonFastPsdTachiePlugin/: LICENSE  README.md  RadeonFastPsdTachiePlugin.sln
src/RadeonFastPsdTachiePlugin/AmfNative/: AmfNative.cpp  AmfNative.h
src/RadeonFastPsdTachiePlugin/NVEncVideoWriterPlugin/: AmfConfigView.cs  AmfNativeMethods.cs  AmfVideoFileWriter.cs
src/RadeonFastPsdTachiePlugin/RadeonFastPsdTachiePlugin/: RadeonFastPsdTachiePlugin.cs  RadeonFastPsdTachiePlugin.csproj
(+3 files in other folders)
